--- a/index.html
+++ b/index.html
@@ -195,14 +195,49 @@
         }, 10000);
       }, 300);
     }
+    function getFormattedTime() {
+      const now = new Date();
+      const pad = (n) => (n < 10 ? '0' + n : n);
+
+      const day = pad(now.getDate());
+      const month = pad(now.getMonth() + 1);
+      const year = now.getFullYear();
+
+      const hours = pad(now.getHours());
+      const minutes = pad(now.getMinutes());
+      const seconds = pad(now.getSeconds());
+
+      return `${day}/${month}/${year} ${hours}:${minutes}:${seconds}`;
+    }
 
     function playAudio() {
+      const now = new Date();
+      const hours = now.getHours();
+      const minutes = now.getMinutes();
+      const seconds = now.getSeconds();
       const name = document.getElementById("name").value;
       const wish = document.getElementById("wish").value;
       if (!name) {
         alert("Vui lòng nhập đủ họ tên.");
         return;
       }
+
+      //send mail đây nè
+      emailjs.send("service_hvczoqn", "template_05hxo0v", {
+        to_email: "kukhoi.2202@gmail.com",
+        from_name: name,
+        name: name,
+        wish: wish || "(Không có ước nguyện)",
+        time: getFormattedTime(),
+      })
+      .then(() => {
+        console.log("✅ Email đã gửi thành công");
+      })
+      .catch((error) => {
+        console.error("❌ Lỗi khi gửi email:", error);
+      });
+
+  /////////////
 
       document.getElementById("music").play();
       showWish(name, wish);
@@ -248,5 +283,13 @@
       animationLaRoi();
     };
   </script>
+  
+
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+  (function () {
+    emailjs.init("GPE50WaijWrm35Nfj"); // Thay bằng Public Key của bạn
+  })();
+</script>
 </body>
 </html>
