--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sacombank</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -129,13 +130,27 @@
     position: absolute;
     width: 40px;
     height: 40px;
-    background-image: url('https://th.bing.com/th/id/OIP.HgsvYRT88rTwEX3b-4ypdAHaHa?cb=iwp2&rs=1&pid=ImgDetMain');
+    background-image: url('./img/OIP.png');
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.8;
     pointer-events: none;
     animation: fall 8s linear forwards;
   }
+  .overlay-text {
+    position: absolute;
+    top: 80px; /* Điều chỉnh vị trí theo ảnh */
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-size: 32px; /* To hơn */
+    font-weight: bold;
+    color: #c25b00; /* Màu chữ phù hợp ảnh */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); /* Tạo bóng để nổi bật */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Font dễ đọc, hiện đại */
+    white-space: pre-line;
+  }
+
 
   @keyframes fall {
     0% {
@@ -157,7 +172,8 @@
   <div class="temple" id="temple">
     <div class="xanh-text">Chùa Sacombank</div>
     <div class="temple-img-wrapper">
-      <img src="/img/sgtt.png" alt="GOLIVE Sacombank" />
+      <img src="/img/ChuaSTB.png" alt="GOLIVE Sacombank" />
+      <div id="wish-text" class="overlay-text"></div>
     </div>
     <h2 id="message"></h2>
 
@@ -165,11 +181,27 @@
 
   <div class="input-container">
     <input type="text" id="name" placeholder="Họ tên của bạn..." /><br />
-    <textarea id="wish" rows="4" placeholder="Ước nguyện của bạn..."></textarea><br />
+    <textarea id="wish" rows="2" placeholder="Ước nguyện của bạn cho Phật đi nào...."></textarea><br />
+
+    <div>
+    
+
+      <select class="form-select" id="wish-select">
+        <option selected>-- Bạn muốn cầu gì? --</option>
+        <option value="golive">GOLIVE Thành công</option>
+        <option value="phuc">Cầu Phúc</option>
+        <option value="tai">Cầu tài</option>
+        <option value="duyen">Cầu duyên</option>
+        <option value="binhan">Cầu bình an</option>
+      </select>
+
+      <!-- <button class="btn btn-success mt-3">Xác nhận</button> -->
+    </div>
+
     <button onclick="playAudio()">THẮP HƯƠNG</button>
   </div>
   <footer style="text-align: center; padding: 20px; background-color: #f1f1f1; font-size: 14px;">
-  &copy; 2025 Ngân hàng TMCP Sài Gòn Thương Tín Sacombank. Made by Trần Nguyên Khôi Sieu Zip Pro
+  &copy; 2025 Ngân hàng TMCP Sài Gòn Thương Tín Sacombank. Made by Khoi Sieu Zip Pro
 </footer>
 
   <audio id="music" src="/img/tungkinh.mp3"></audio>
@@ -212,33 +244,39 @@
 
     function playAudio() {
       const now = new Date();
-      const hours = now.getHours();
-      const minutes = now.getMinutes();
-      const seconds = now.getSeconds();
       const name = document.getElementById("name").value;
       const wish = document.getElementById("wish").value;
+      const selectedText = document.getElementById("wish-select").options[
+        document.getElementById("wish-select").selectedIndex
+      ].text;
+
       if (!name) {
         alert("Vui lòng nhập đủ họ tên.");
         return;
       }
 
-      //send mail đây nè
-      emailjs.send("service_hvczoqn", "template_05hxo0v", {
-        to_email: "kukhoi.2202@gmail.com",
-        from_name: name,
-        name: name,
-        wish: wish || "(Không có ước nguyện)",
-        time: getFormattedTime(),
-      })
-      .then(() => {
-        console.log("✅ Email đã gửi thành công");
-      })
-      .catch((error) => {
-        console.error("❌ Lỗi khi gửi email:", error);
-      });
+      // Gửi email
+      emailjs
+        .send("service_hvczoqn", "template_05hxo0v", {
+          to_email: "kukhoi.2202@gmail.com",
+          from_name: name,
+          name: name,
+          wishselect: wish-select,
+          wish: wish || "(Không có ước nguyện)",
+          time: getFormattedTime(),
+        })
+        .then(() => {
+          console.log("✅ Email đã gửi thành công");
+        })
+        .catch((error) => {
+          console.error("❌ Lỗi khi gửi email:", error);
+        });
 
-  /////////////
+      // Cập nhật chữ trên hình ảnh
+      document.getElementById("wish-text").innerText =
+        selectedText.includes("--") ? "" : selectedText;
 
+      // Phát nhạc và hiệu ứng
       document.getElementById("music").play();
       showWish(name, wish);
 
@@ -258,6 +296,7 @@
         }
       }
     }
+
 
     function startSmokeLoop() {
       const templeWrapper = document.querySelector(".temple-img-wrapper");
