--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div>
     
 
-      <select class="form-select" id="wish-select">
+      <select class="form-select" id="wishselect">
         <option selected>-- Bạn muốn cầu gì? --</option>
         <option value="golive">GOLIVE Thành công</option>
         <option value="phuc">Cầu Phúc</option>
@@ -201,7 +201,7 @@
     <button onclick="playAudio()">THẮP HƯƠNG</button>
   </div>
   <footer style="text-align: center; padding: 20px; background-color: #f1f1f1; font-size: 14px;">
-  &copy; 2025 Ngân hàng TMCP Sài Gòn Thương Tín Sacombank. Made by Khoi Sieu Zip Pro
+  &copy; 2025 Ngân hàng TMCP Sài Gòn Thương Tín Sacombank. Made by Trần Nguyên Khôi Sieu Zip Pro
 </footer>
 
   <audio id="music" src="/img/tungkinh.mp3"></audio>
@@ -246,8 +246,8 @@
       const now = new Date();
       const name = document.getElementById("name").value;
       const wish = document.getElementById("wish").value;
-      const selectedText = document.getElementById("wish-select").options[
-        document.getElementById("wish-select").selectedIndex
+      const selectedText = document.getElementById("wishselect").options[
+        document.getElementById("wishselect").selectedIndex
       ].text;
 
       if (!name) {
@@ -261,8 +261,7 @@
           to_email: "kukhoi.2202@gmail.com",
           from_name: name,
           name: name,
-          wishselect: wish-select,
-          wish: wish || "(Không có ước nguyện)",
+          wish: wishselect || "(Không có ước nguyện)",
           time: getFormattedTime(),
         })
         .then(() => {
@@ -278,7 +277,7 @@
 
       // Phát nhạc và hiệu ứng
       document.getElementById("music").play();
-      showWish(name, wish);
+      showWish(name, wishselect);
 
       const templeWrapper = document.querySelector(".temple-img-wrapper");
 
