remove ghi am nham

--- a/index.html
+++ b/index.html
@@ -322,28 +322,28 @@
       
       switch (selectedValueComboBox) {
         case "golive":
-          document.getElementById("musicGolive").play();
-          await sleep(5000);
+          // document.getElementById("musicGolive").play();
+          // await sleep(5000);
           document.getElementById("music").play();
           break;
         case "phuc":
-          document.getElementById("musicPhuc").play();
-          await sleep(5000);
+          // document.getElementById("musicPhuc").play();
+          // await sleep(5000);
           document.getElementById("music").play();
           break;
         case "tai":
-          document.getElementById("musicTai").play();
-          await sleep(6000);
+          // document.getElementById("musicTai").play();
+          // await sleep(6000);
           document.getElementById("music").play();
           break;
         case "duyen":
-          document.getElementById("musicDuyen").play();
-          await sleep(5500);
+          // document.getElementById("musicDuyen").play();
+          // await sleep(5500);
           document.getElementById("music").play();
           break;
         case "binhan":
-          document.getElementById("musicAn").play();
-          await sleep(5000);
+          // document.getElementById("musicAn").play();
+          // await sleep(5000);
           document.getElementById("music").play();
           break;
         default:
